include/qkrylov/c_api.h

/* -----------------------------------------------------------------------------
 * Return Error Codes & Precision IDs
 * ----------------------------------------------------------------------------- */
#define QKRYLOV_SUCCESS                0
typedef struct qkrylov_device_vector_t* qkrylov_device_vector_h;
/* -----------------------------------------------------------------------------
 * Device & Hardware Query API
 * ----------------------------------------------------------------------------- */
QKRYLOV_API int         qkrylov_is_gpu_build(void);
QKRYLOV_API const char* qkrylov_find_gpu(void);
QKRYLOV_API int         qkrylov_gpu_count(void);
QKRYLOV_API int         qkrylov_initialize_device(const char* device_str);
/* =============================================================================
 * Device-Resident Vector API (Zero-Copy GPU Operations)
 * ============================================================================= */

/* Common Device Vector Management */
QKRYLOV_API void                    qkrylov_device_vector_destroy(qkrylov_device_vector_h vec);
QKRYLOV_API void*                   qkrylov_device_vector_data(qkrylov_device_vector_h vec);
/* Single-Precision (FP32) Device Vector Operations */
QKRYLOV_API qkrylov_device_vector_h qkrylov_device_vector_create_fp32(uint64_t dim);
QKRYLOV_API int                     qkrylov_device_vector_copy_from_host_fp32(qkrylov_device_vector_h dst, const float* host_src_complex);
QKRYLOV_API int                     qkrylov_device_vector_copy_to_host_fp32(const qkrylov_device_vector_h src, float* host_dst_complex);
QKRYLOV_API int                     qkrylov_device_vector_copy_fp32(const qkrylov_device_vector_h src, qkrylov_device_vector_h dst);
/* Double-Precision (FP64) Device Vector Operations */
QKRYLOV_API qkrylov_device_vector_h qkrylov_device_vector_create_fp64(uint64_t dim);
QKRYLOV_API int                     qkrylov_device_vector_copy_from_host_fp64(qkrylov_device_vector_h dst, const double* host_src_complex);
QKRYLOV_API int                     qkrylov_device_vector_copy_to_host_fp64(const qkrylov_device_vector_h src, double* host_dst_complex);
QKRYLOV_API int                     qkrylov_device_vector_copy_fp64(const qkrylov_device_vector_h src, qkrylov_device_vector_h dst);